--- a/wbql/bql.tex
+++ b/wbql/bql.tex
@@ -296,6 +296,15 @@ One can also directly access a single object using
 \BL
   select OBJECT('Paper', 'p1')
 \end{lstlisting}
+
+Each object in the database has a name, belongs to a class
+and is time-stamped to the last time a value was modified.
+These fields can be accessed as methods
+\BL
+  select p in ?Paper, p.name, p.class, p.timestamp
+\end{lstlisting}
+ 
+
 We can get to a tag using $\#$, and get the value behind a tag using $-$$>$. For example the following query
 \BL
    select p in ?Paper, a in p->Author,prof in a#Professor, z in a->Affiliation
@@ -387,9 +396,9 @@ we obtain the silly combinatorial answer
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Sum, min, max and average}
+\subsection{COUNT, MIN, MAX, SUM, AVERAGE, STDDEV}
 
-The MIN, MAX, SUM or AVERAGE of any numerical variable,
+The MIN, MAX, SUM, AVERAGE or STDDEV of any numerical variable,
 for example a multi-valued numerical field, can be evaluated
 by interpolating in capitals the desired operator in front of its definition
 \BL
@@ -938,7 +947,8 @@ since it is very easy, when dates are involved, to mean something and write some
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{DNA and proteins, motif searches}
 
-A specificity of acedb is that it understands the genetic code. If the database contains sequences, or mRNAs, 
+A specificity of acedb is that it understands the genetic code. If the database 
+contains sequences, or mRNAs, 
 or any object with a DNA tag, one can obtain its DNA using
 \BL
    select s in class sequence, d in DNA(s)
@@ -952,13 +962,14 @@ or any object with a DNA tag, one can obtain its DNA using
       dna in DNA(s,1,6), adn in DNA(s,6,1)
 // gives
    my_sequence  atgttg    caacat
-// PEPTIDE will translate the sequence 
+// PEPTIDE will translate the sequence, including the UTR, in frame 1
    select PEPTIDE (@,1,2)
 // gives Methionine-Leucine (atg codes for Met, ttg for Leu)
    ML
+// CODING will translate only sequences with tag CDS, up to the stop 
 // To get all proteins encoded in messenger RNA, try
    select ?sequence CDS      // the CDS tag means the sequence is coding
-   select -o f ?sequence CDS ; PEPTIDE // all proteins are written to file f
+   select -o f ?sequence ; CODING // all proteins are written to file f
 \end{lstlisting}
 Notice that acedb will translate nuclear DNA using the standard genetic code, 
 but if the relevant standardized information has been provided in the database,
@@ -1136,25 +1147,23 @@ $https://github.com/jtmieg/AceView$
 
 To summarize, the full list of operators, in their order of precedence is
 \BL
-   ; order\_by
+   ; TITLE order\_by
    from select , where
-   in = 
+   in := = 
    || OR ^^ XOR &&  AND ! NOT
    like =~ ~ == != >= <= > < >~ <~
    ISA
-   + - * / ^ modulo
-   class
-   DNA PEPTIDE DATEDIFF 
-   count
-   >> -> # => :
-   @
-   object
+   modulo + - * / ^
+   DNA PEPTIDE PEP CODING DATEDIFF 
+   COUNT MIN MAX SUM AVERAGE STDDEV
+   .class .name .timestamp
+   >> -> # => 
+   @ OBJECT
    () {} []
-   BACKQUOTE QUOTE DOUBLEQUOTE 
 \end{lstlisting}
 
 with the restriction that the 3 kinds of parentheses and 
-also the quotes must be nested correctly  (["bb"]) is correct but (x[y)] is illegal.
+also the quotes must be nested correctly  (["bb"]) is correct but (x[y)] is illegal. Operators written in capitals, i.e. DNA or AVERAGE, must be written in capitals (are case-sensitive)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION
